# sparrowDB

./: .gitignore  Cargo.toml  README.md  tests.sh
.devcontainer/: devcontainer.json
artwork/: Pages and Cache-1.xopp
components/buffer/: Cargo.toml
components/buffer/src/: bufferpoolmanager.rs  catalog.rs  create_handler.rs  frameheader.rs  lib.rs  page_guard.rs  query_types.rs  test.rs
components/common/: Cargo.toml
components/common/src/: lib.rs  page.rs  query_types.rs  skiplist.rs  skiplistindex.rs  transaction.rs  types.rs
components/concurrency_manager/: Cargo.toml
components/file_system/: Cargo.toml
components/file_system/src/: file.rs  io_rate_limiter.rs  lib.rs
components/mvcc/: Cargo.toml
components/mvcc/src/: lib.rs  transaction.rs  transaction_manager.rs  types.rs
components/query_executors/: Cargo.toml
components/query_executors/src/: catalog.rs  create_handler.rs  lib.rs  query_types.rs  test.rs
components/query_planner/: Cargo.toml
components/query_planner/src/: catalog.rs  lib.rs
components/storage_engine/: Cargo.toml
components/storage_engine/src/: bplustree.rs  disk_manager.rs  disk_scheduler.rs  lib.rs  page.rs  page_guard.rs  skiplist.rs
docs/: HTAP.xopp  Rate Limiter - files.xopp
docs/artwork/: Pages and Cache-1.xopp
src/: lib.rs  main.rs
src/buffer/: bfm.txt  bufferpoolmanager.rs  lib.rs  mod.rs  test.rs
src/storage/: bplustree.rs  mod.rs  page.rs
tests/: integration_test.rs
