[package]
name = "buffer"
version = "0.1.0"
edition = "2021"

[dependencies]
storage_engine = { path = "../storage_engine" }
common = { path = "../common" }
file_system = { path = "../file_system" }
rand = "0.9.0"
skiplist = "0.4"
bincode = "1.3.3"
serde = { version="1.0.217", features = ["derive"] }
serde_bytes = "0.11.15"


[dev-dependencies]


