[package]
name = "query_executors"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
datafusion-sql = "44.0.0"
datafusion-optimizer = "44.0.0"
datafusion = "44.0.0"
sqlparser = "0.54.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
arrow = "54.1.0"
rand = "0.9.0"
skiplist = "0.4"
buffer = { path = "../buffer"}
